Fix: Navbar styling and z-index

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -22,6 +22,7 @@
 
 /* Styling for Cards */
 .card {
+  z-index: -1;
   position: relative;
   margin: 5px;
   padding: 20px;
