--- a/staticfiles/css/style.css
+++ b/staticfiles/css/style.css
@@ -22,6 +22,7 @@
 
 /* Styling for Cards */
 .card {
+  z-index: -1;
   position: relative;
   margin: 5px;
   padding: 20px;
@@ -45,6 +46,7 @@
 .container-fluid {
   padding: 2px 16px;
   align-content: center;
+  justify-content: center;
   width: 100%;
 }
 
